# memops-cognee-hackathon

./: BLOG_2_WHY_CONNECTION_MATTERS.md  DEMO_SCRIPT.md  README.md  docker-compose.yml  vercel.json
backend/: .env.example  .gitignore  Dockerfile  HF_README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: agents.py  main.py  memory.py  models.py  permissions.py  pipeline.py
backend/mcp_server/: README.md  __init__.py  __main__.py  server.py
backend/ontology/: itil_subset.ttl
backend/scripts/: flush_pools.py  populate_graph.py  restart_service.py  smoke_test.sh
backend/tests/: test_backend.py
frontend/: package-lock.json  package.json  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: agent-invocation-panel.tsx  audit-deck.tsx  cognitive-refinery.tsx  compare-view.tsx  error-boundary.tsx  graph3d.tsx  incident-control.tsx  inspector-panel.tsx  memory-badges.tsx  provenance-explorer.tsx  sre-copilot.tsx  temporal-slider.tsx  temporal-timeline.tsx
frontend/components/ui/: button.tsx  carousel.tsx  sidebar.tsx
frontend/hooks/: use-mobile.ts
frontend/lib/: api.ts
